--- a/style.css
+++ b/style.css
@@ -1,21 +1,26 @@
-body {
-    background-color: #f5f5f5;
+body, html {
+    padding: 0;
+    margin: 0;
+}
+
+body{
+    background-color: #ffff;
+}
+
+.Body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     display: flex;
     justify-content: center;
-    align-items: center;
     min-height: 100vh;
 }
 
 .container {
-    background-color: white;
-    padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     text-align: center;
-	width: 70%;
+    width: 100%;
+    height: 100vh; /* Cambia la altura al 100vh para ocupar toda la pantalla */
 }
 
 h1 {
@@ -35,4 +40,40 @@ th, td {
 
 th {
     background-color: #f2f2f2;
+}
+
+.Menu {
+    background-color: #ffff;
+    padding: 10px;
+    border-radius: 5px;
+    text-align: left;
+    width: 2%;
+    height: 90%;
+    position: absolute;
+    top: 0px; /* Ajusta la posición vertical según tus necesidades */
+    left: 0px; /* Ajusta la posición horizontal según tus necesidades */
+    z-index: 500;
+}
+
+.map{
+    top: 0px; /* Ajusta la posición vertical según tus necesidades */
+    left: 0px;
+}
+
+/* Style for the clear button */
+.leaflet-control-button {
+    background-image: url('broom.jpg');
+    background-size: cover;
+    width: 32px; /* Set the width and height to match your image size */
+    height: 32px;
+}
+
+/* Style for the info tab */
+.leaflet-control-info {
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 5px;
+    width: 200px;
+    text-align: left;
 }
