--- a/style.css
+++ b/style.css
@@ -1,24 +1,22 @@
 body, html {
     padding: 0;
     margin: 0;
+    overflow-y:hidden;
 }
 
 body{
     background-color: #ffff;
-}
-
-.Body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     display: flex;
     justify-content: center;
     min-height: 100vh;
+    min-width: 100vw;
 }
 
 .container {
     border-radius: 10px;
-    text-align: center;
     width: 100%;
     height: 100vh; /* Cambia la altura al 100vh para ocupar toda la pantalla */
 }
@@ -46,13 +44,23 @@ th {
     background-color: #ffff;
     padding: 10px;
     border-radius: 5px;
-    text-align: left;
-    width: 2%;
-    height: 90%;
+    text-align: center;
+    width: 6%;
+    height: 100%;
     position: absolute;
     top: 0px; /* Ajusta la posición vertical según tus necesidades */
     left: 0px; /* Ajusta la posición horizontal según tus necesidades */
     z-index: 500;
+    box-shadow: 0 1px 2px rgba(60,64,67,0.3),0 2px 6px 2px rgba(60,64,67,0.15);
+    flex-direction: column;
+}
+
+#menu_bar{
+    /*! font-size: 45px; */ /* Cambiar el tamaño del icono */
+    color: red; /* Cambiar el color del icono (opcional) */
+    width:40px;
+    height: 40px;
+    z-index: 501;
 }
 
 .map{
