--- a/style_History.css
+++ b/style_History.css
@@ -6,29 +6,37 @@ body, html {
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
     display: block;
     min-height: 100vh;
 }
+
 .Menu {
-    background-color: #ffff;
+    position: relative;
+    display: flex;
+    align-items: center;
+    align-content: center;
     padding: 10px;
     border-radius: 5px;
-    text-align: left;
     width: 100%;
     height: 6%;
-    position: relative;
-    top: 0px; /* Ajusta la posición vertical según tus necesidades */
-    left: 0px; /* Ajusta la posición horizontal según tus necesidades */
-    z-index: 500;
+    top: 0px;
+    left: 0px;
     box-shadow: 0 1px 2px rgba(60,64,67,0.3),0 2px 6px 2px rgba(60,64,67,0.15);
-    flex-direction: column;
 }
 
 #menu_bar{
     width:40px;
     height: 40px;
-    z-index: 501;
+}
+
+#logo{
+    position: absolute;
+    top: 2%; /* Ajusta la distancia desde la parte superior en porcentaje de la altura de la ventana */
+    right: 3%; /* Ajusta la distancia desde la derecha en porcentaje del ancho de la ventana */
+    width:45px;
+    height: 55px;
+    padding-bottom: 0.5em;
+    padding-right: 0.5em;
 }
 
 .title{
@@ -38,8 +46,6 @@ body {
 }
 
 .container {
-    background-color: #ffffff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     display: flex;
     text-align: center;
     padding-top: 1em;
@@ -49,14 +55,16 @@ body {
     justify-content: space-around;
 }
 
-.Result{
-    display: flex;
-    justify-content: center;
-    text-align: center;
+
+.container-map {
+    border-radius: 10px;
+    width: 100%;
+    height: 70vh; /* Cambia la altura al 100vh para ocupar toda la pantalla */
 }
 
 h1 {
-    margin-bottom: 20px;
+    font-size: 1.2em;
+    color: #ffff;
 }
 
 label {
@@ -64,36 +72,22 @@ label {
     margin-bottom: 10px;
 }
 
-input[type="date"] {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    width: 45%; /* Ajusta el ancho según tus necesidades */
-}
-
-button {
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: #ffffff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-#resultado {
-    margin-top: 20px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-    text-align: left;
-}
-
 /* Estilos para los bloques de fecha */
 .fecha-bloque {
-    background-color: #f0f0f0;
+    background-color: #a02ad2;
     padding: 10px;
     border: 1px solid #ccc;
-    border-radius: 5px;
-    width: 45%; /* Ajusta el ancho según tus necesidades */
+    border-radius: 2em;
+    width: 35%;
+    height: 20%;
+}
+
+/* Style for the info tab */
+.leaflet-control-info {
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 5px;
+    width: 200px;
+    text-align: left;
 }
