--- a/style_History.css
+++ b/style_History.css
@@ -72,6 +72,29 @@ label {
     margin-bottom: 10px;
 }
 
+button{
+    background-color: #a02ad2;
+    border: 1px solid #ccc;
+    border-radius: 1em;
+}
+
+.Button_Avanzar{
+    position: absolute;
+    bottom: 30%; /* Ajusta la distancia desde la parte superior en porcentaje de la altura de la ventana */
+    right: 15%; /* Ajusta la distancia desde la derecha en porcentaje del ancho de la ventana */
+    width: 5%;
+    height: 10%;
+    z-index: 600;
+}
+
+.Button_Retroceder{
+    position: absolute;
+    bottom: 30%; /* Ajusta la distancia desde la parte superior en porcentaje de la altura de la ventana */
+    right: 5%; /* Ajusta la distancia desde la derecha en porcentaje del ancho de la ventana */
+    width: 5%;
+    height: 10%;
+    z-index: 600;
+}
 /* Estilos para los bloques de fecha */
 .fecha-bloque {
     background-color: #a02ad2;
