--- a/style.css
+++ b/style.css
@@ -72,8 +72,8 @@ th {
 #banner_bar{
     position: absolute;
     top:0%; /* Ajusta la distancia desde la parte superior en porcentaje de la altura de la ventana */
-    left: 38%; /* Ajusta la distancia desde la derecha en porcentaje del ancho de la ventana */
-    width:25vw;
+    left: 50%; /* Ajusta la distancia desde la derecha en porcentaje del ancho de la ventana */
+    width:250px;
     height: 20vh;
     z-index: 601;
 }
