Prueba de hot_reload #2

--- a/style_History.css
+++ b/style_History.css
@@ -73,7 +73,7 @@ label {
 }
 
 button{
-    background-color: #a02ad2;
+    background-color: #f90808;
     border: 1px solid #ccc;
     border-radius: 1em;
     width: 7vw;
