--- a/style.css
+++ b/style.css
@@ -1,21 +1,24 @@
-body {
-    background-color: #f5f5f5;
+body, html {
+    padding: 0;
+    margin: 0;
+    overflow-y:hidden;
+}
+
+body{
+    background-color: #ffff;
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     display: flex;
     justify-content: center;
-    align-items: center;
     min-height: 100vh;
+    min-width: 100vw;
 }
 
 .container {
-    background-color: white;
-    padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    text-align: center;
-	width: 70%;
+    width: 100%;
+    height: 100vh; /* Cambia la altura al 100vh para ocupar toda la pantalla */
 }
 
 h1 {
@@ -35,4 +38,66 @@ th, td {
 
 th {
     background-color: #f2f2f2;
+}
+
+.Menu {
+    background-color: #ffff;
+    padding: 10px;
+    border-radius: 5px;
+    text-align: center;
+    width: 75px;
+    height: 100%;
+    position: absolute;
+    top: 0px; /* Ajusta la posición vertical según tus necesidades */
+    left: 0px; /* Ajusta la posición horizontal según tus necesidades */
+    z-index: 500;
+    box-shadow: 0 1px 2px rgba(60,64,67,0.3),0 2px 6px 2px rgba(60,64,67,0.15);
+    flex-direction: column;
+}
+
+#menu_bar{
+    width:40px;
+    height: 40px;
+}
+
+#logo{
+    position: absolute;
+    bottom:5%; /* Ajusta la distancia desde la parte superior en porcentaje de la altura de la ventana */
+    left: 25%; /* Ajusta la distancia desde la derecha en porcentaje del ancho de la ventana */
+    width:45px;
+    height: 55px;
+    padding-bottom: 0.5em;
+}
+
+#banner_bar{
+    position: absolute;
+    top:0%; /* Ajusta la distancia desde la parte superior en porcentaje de la altura de la ventana */
+    left: 45%; /* Ajusta la distancia desde la derecha en porcentaje del ancho de la ventana */
+    right:45%;
+    width:250px;
+    height: 20vh;
+    z-index: 601;
+}
+
+.map{
+    top: 0px; /* Ajusta la posición vertical según tus necesidades */
+    left: 0px;
+}
+
+/* Style for the clear button */
+.leaflet-control-button {
+    background-image: url('broom.jpg');
+    background-size: cover;
+    width: 50px; /* Set the width and height to match your image size */
+    height: 50px;
+}
+
+/* Style for the info tab */
+.leaflet-control-info {
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 5px;
+    width: 200px;
+    text-align: left;
 }
