--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -4,6 +4,7 @@
 
 *{
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
@@ -17,7 +18,6 @@ body {
 }
 
 .sidebar{
-    padding: 0;
     position: fixed;
     top: 0;
     left: 0;
@@ -250,10 +250,12 @@ body {
     color: black;
 }
 #map-template  {
-    height: 0%;
-    width: 100%;
+    height: 100%;
+    width: 80%;
     position: absolute;
     background: #F2EFE9;
+    top: 0px; /* Ajusta la posición vertical según tus necesidades */
+    left: 70px;
 }
 
 /* Style for the clear button */
