--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -31,20 +31,20 @@
         <hr style="margin-top: 10px; width: 80%; height: 0.1mm">
         <ul class="nav_list">
             <li>
-                <h1>Fecha de ingreso</h1>
+                <div class="sub-titles">Fecha de ingreso<div>
                 <div class="iocn-link">
                         <i class='bx bx-calendar'></i>
                         <span class="links_name" id="date"></span>
                 </div>
             </li>
             <li>
-                <h1>Hora de ingreso</h1>
+                <div class="sub-titles">Hora de ingreso</div>
                 <div class="iocn-link">
                         <i class='bx bx-time' ></i>
                         <span class="links_name" id="time"></span>
                 </div>
                 <div></div>
-                <h1>Úbicate en el mapa</h1>
+                <div class="sub-titles">Úbicate en el mapa</div>
                 <button id="button" onclick="centerMap()" style="border-radius: 20px">
                     <i class='bx bx-target-lock'></i>
                 </button>
