--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -45,7 +45,7 @@
                 </div>
                 <div></div>
                 <button id="button" onclick="centerMap()" style="border-radius: 20px">
-                    <i class='bx bx-target-lock'></i>
+                    <i class='bx bx-target-lock'>Úbicate en el mapa</i>
                 </button>
                 <div class="sub-titles">Úbicate en el mapa</div>
             </li>
