--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -31,7 +31,7 @@
         <hr style="margin-top: 10px; width: 80%; height: 0.1mm">
         <ul class="nav_list">
             <li>
-                <div class="sub-titles">Fecha de ingreso<div>
+                <div class="sub-titles">Fecha de ingreso</div>
                 <div class="iocn-link">
                         <i class='bx bx-calendar'></i>
                         <span class="links_name" id="date"></span>
@@ -45,7 +45,7 @@
                 </div>
                 <div></div>
                 <button id="button" onclick="centerMap()" style="border-radius: 20px">
-                    <i class='bx bx-target-lock'>Úbicate en el mapa</i>
+                    <i class='bx bx-target-lock'></i>
                 </button>
                 <div class="sub-titles">Úbicate en el mapa</div>
             </li>
