Detalles del css y html

--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -161,6 +161,9 @@ body {
     font-size: 17px;
 }
 
+#btn-gps{
+    padding-left: 2em;
+}
 .sidebar .links_name{
     opacity: 0;
     pointer-events: none;
