--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -47,7 +47,7 @@
                 <button id="button" onclick="centerMap()" style="border-radius: 20px">
                     <i class='bx bx-target-lock'></i>
                 </button>
-                <div class="sub-titles">Úbicate en el mapa</div>
+                <div class="sub-titles" id="btn-gps">Úbicate en el mapa</div>
             </li>
             <li>
                 <div class="iocn-link-rt">
