--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -101,6 +101,7 @@ body {
     transition: all 0.4s ease;
     padding-left: 5px;
     border-radius: 12px;
+    padding-bottom: 1.5em;
 }
 
 .sidebar .nav_list li button{
@@ -127,6 +128,12 @@ body {
     transition: all 0.4s ease;
     padding-left: 5px;
     border-radius: 18px;
+}
+
+#pickingMap_btn{
+    position: relative;
+    bottom: 1vh;
+    left: 17px;
 }
 
 .sidebar .nav_list li a:hover{
@@ -176,7 +183,6 @@ body {
     pointer-events: auto;
     margin-left: 10px;
     font-size: 17px;
-    padding-bottom: 1.5em;
 }
 
 .sidebar.active .historic{
