--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -88,7 +88,7 @@
                     </div>
                 </div>
             </li>
-            <li>
+            <li id="pickingMap_btn">
                 <div class="iocn-link-rt">
                     <a href="#" id="pickingMap">
                         <i class='bx bxs-map-pin'></i>
