--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -114,6 +114,10 @@ body {
     transition: all 0.4s ease;
 }
 
+.sidebar .nav_list {
+    height: 100%;
+}
+
 .sidebar.active .nav_list li button {
     margin-left: 35%;
 }
@@ -132,8 +136,8 @@ body {
 
 #pickingMap_btn{
     position: relative;
-    bottom: 1vh;
-    left: 17px;
+    bottom: -33vh;
+    left: 0px;
 }
 
 .sidebar .nav_list li a:hover{
