--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -136,7 +136,7 @@ body {
 
 #pickingMap_btn{
     position: relative;
-    bottom: -33vh;
+    bottom: -24vh;
     left: 0px;
 }
 
@@ -250,8 +250,8 @@ body {
 }
 
 .home_content{
-    position: fixed;
-    width: calc(100% - 65px);
+    position: absolute;
+    width: 112%;
     left: 65px;
     height: 100%;
     transition: all 0.4s ease;
@@ -305,4 +305,5 @@ body {
 .sidebar.active ~ .home_content{
     width: 100%;
     left: 240px;
+    position: fixed;
 }
