Pruebas en el index.ejs add un botón tiempo real

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -49,6 +49,14 @@
                 </button>
                 <div class="sub-titles" id="btn-gps">Úbicate en el mapa</div>
             </li>
+            <li id="pickingMap_btn">
+                <div class="iocn-link-rt">
+                    <a href="#" id="pickingMap">
+                        <i class='bx bxs-map-pin'></i>
+                        <span class="links_name">Tiempo real</span>
+                    </a>
+                </div>
+            </li>
             <li>
                 <div class="iocn-link-rt">
                     <a href="#" id="recorridos">
