Pruebas de .ejs

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -49,10 +49,10 @@
                 </button>
                 <div class="sub-titles" id="btn-gps">Úbicate en el mapa</div>
             </li>
-            <li id="pickingMap_btn">
+            <li id="RealTime_btn">
                 <div class="iocn-link-rt">
                     <a href="#" id="pickingMap">
-                        <i class='bx bxs-map-pin'></i>
+                        <box-icon name='car'></box-icon>
                         <span class="links_name">Tiempo real</span>
                     </a>
                 </div>
