Correción logo Tiempo real

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -52,7 +52,7 @@
             <li id="RealTime_btn">
                 <div class="iocn-link-rt">
                     <a href="#" id="pickingMap">
-                        <box-icon name='car'></box-icon>
+                        <i class='bx bxs-car'></i>
                         <span class="links_name">Tiempo real</span>
                     </a>
                 </div>
