--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -66,7 +66,7 @@
                 </div>
                 <div class="historic active">
                     <div class="moment">
-                        <p style="margin-top: 5px">Escoja fecha y hora de incio</p>
+                        <p style="margin-top: 5px">Fecha y hora de incio</p>
                         <input
                                 id="start_date"
                                 type="date"
@@ -78,7 +78,7 @@
                                 style="margin-top: 5px">
                     </div>
                     <div class="moment">
-                        <p style="margin-top: 10px">Escoja fecha y hora de fin</p>
+                        <p style="margin-top: 10px">Fecha y hora de fin</p>
                         <input
                                 id="end_date"
                                 type="date"
