--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -213,7 +213,7 @@ body {
 
 .sidebar.active .historic .moment p{
     color: #ffffff;
-    font-size: 16px;
+    font-size: 12px;
     margin-bottom: 5px;
     transition: all 0.4s ease;
     opacity: 1;
@@ -222,7 +222,8 @@ body {
 .sidebar.active .historic .moment input{
     margin-left: 15%;
     position: relative;
-    font-size: 15px;
+    align-items: center;
+    font-size: 12px;
     border-radius: 5px;
     background: #c9d1ff;
     width: 120px;
