Cambios en el html btn time real

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -49,9 +49,9 @@
                 </button>
                 <div class="sub-titles" id="btn-gps">Úbicate en el mapa</div>
             </li>
-            <li id="RealTime_btn">
+            <li>
                 <div class="iocn-link-rt">
-                    <a href="#" id="pickingMap">
+                    <a href="#" id="RealTime_btn">
                         <i class='bx bxs-car'></i>
                         <span class="links_name">Tiempo real</span>
                     </a>
