--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -176,7 +176,7 @@
         }
 
         // Obtén una referencia al botón "Tiempo real" por su nuevo identificador
-        let realTimeButton = document.querySelector("#realTimeButton");
+        let realTimeButton = document.querySelector("#RealTime_btn");
 
         // Agrega un evento de clic al botón
         realTimeButton.addEventListener('click', function() {
