Arreglando el mapa en tiempo real #1

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -51,10 +51,10 @@
             </li>
             <li>
                 <div class="iocn-link-rt">
-                    <button id="RealTime_btn">
+                    <a href="#" id="RealTime_btn">
                         <i class='bx bxs-car'></i>
                         <span class="links_name">Tiempo real</span>
-                    </button>
+                    </a>
                 </div>
             </li>
             <li>
