Agregar una funcionalidad con el slider #3

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -106,6 +106,8 @@
             </li>
         </ul>
     </div>
+    <input type="range" id="radiusSlider" min="0" max="1000" step="10" value="100">
+    <span id="radiusValue">Radio: 100 metros</span>
 
     <div class="home_content">
         <div id="onScreeBox">
