--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -180,8 +180,12 @@
 
         // Agrega un evento de clic al botón
         realTimeButton.addEventListener('click', function() {
-            pickingMap = false;
-            map.removeLayer(histMarker);
+            // Elimina todos los polylines del mapa (puedes personalizar esto según tus necesidades)
+            map.eachLayer(function(layer) {
+                if (layer instanceof L.Polyline) {
+                    map.removeLayer(layer);
+                }
+            });
         });
 
 
